Правки checkstyle (не до конца, но IDE уже  с ошибками падает)